force-app/main/default/objects/EventCommunication__c/EventCommunication__c.object-meta.xml
<CustomObject>
    <description>QCC: This object will hold all the communication sent to the customer for a event</description>
    <label>Event Communication</label>
    <nameField>
        <displayFormat>EC-{000000}</displayFormat>
        <label>EventCommunication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Communications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>