force-app/main/default/objects/EventCommunication__c/fields/ApologyParagraph__c.field-meta.xml
<CustomField>
    <fullName>ApologyParagraph__c</fullName>
    <description>QCC: Apolology Content of the Email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Apology Paragraph</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>