force-app/main/default/objects/EventCommunication__c/fields/FailureCode__c.field-meta.xml
<CustomField>
    <fullName>FailureCode__c</fullName>
    <description>QCC: Failure code Related to the Comms</description>
    <label>Failure Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Failure_Code</valueSetName>
    </valueSet>
</CustomField>