force-app/main/default/objects/EventCommunication__c/fields/FlightEvent__c.field-meta.xml
<CustomField>
    <fullName>FlightEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QCC: Lookup to Flight Event</description>
    <label>Flight Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Event Communications</relationshipLabel>
    <relationshipName>Event_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>