force-app/main/default/objects/EventCommunication__c/fields/FooterParagraph__c.field-meta.xml
<CustomField>
    <fullName>FooterParagraph__c</fullName>
    <description>QCC: Footer Section of the Email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Footer Paragraph</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>