force-app/main/default/objects/EventCommunication__c/fields/IntroParagraph__c.field-meta.xml
<CustomField>
    <fullName>IntroParagraph__c</fullName>
    <description>QCC: Intro Content of the  Email.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Intro Paragraph</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>