force-app/main/default/objects/EventCommunication__c/fields/IsGenericContent__c.field-meta.xml
<CustomField>
    <fullName>IsGenericContent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: If the email content if for multiple non delay Failure Code this will be set to true</description>
    <label>Is Generic Content</label>
    <type>Checkbox</type>
</CustomField>