force-app/main/default/objects/EventCommunication__c/fields/IsGlobalEventComms__c.field-meta.xml
<CustomField>
    <fullName>IsGlobalEventComms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: If the Comms is Associated to a Global Event, This will be True</description>
    <label>Is Global Event Comms</label>
    <type>Checkbox</type>
</CustomField>