force-app/main/default/objects/EventCommunication__c/fields/OnlyLeg__c.field-meta.xml
<CustomField>
    <fullName>OnlyLeg__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: If the Comms will be sent only for leg then this will be true.</description>
    <label>Only Leg</label>
    <type>Checkbox</type>
</CustomField>