force-app/main/default/objects/EventCommunication__c/fields/ReasonParagraph__c.field-meta.xml
<CustomField>
    <fullName>ReasonParagraph__c</fullName>
    <description>QCC: Reason Content of the Email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason Paragraph</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>