force-app/main/default/objects/EventCommunication__c/fields/RecoveryParagraph__c.field-meta.xml
<CustomField>
    <fullName>RecoveryParagraph__c</fullName>
    <description>QCC: Recovery Content of the Email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recovery Paragraph</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>